test/FAIL/runcmd/invalid_arguments/03_test_run.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments"
#-------

load boucle.o
run -0x1000